fixed reference text error with word-wrap tag

--- a/css/main.css
+++ b/css/main.css
@@ -270,6 +270,11 @@ hr {
 	text-align: center;
 }
 
+#reference p {
+	overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+
 
 #footwrap {
 	background: #2f2f2f;
